# gost_forms

./: .clang-format  .gitattributes  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md  build.py  common.py  document_builder.py
tools/: CMakeLists.txt
tools/apps/: CMakeLists.txt
tools/apps/2.106-form1/: 2.106-form1.cxx
tools/apps/2.106-form5/: 2.106-form5.cxx
tools/apps/formgen/: formgen.cxx
tools/apps/listofelgen/: listofelgen.cxx
tools/common/: gostforms.sty
tools/libs/: CMakeLists.txt
tools/libs/kxcomapplib/: kxcomapplib.cxx  kxcomapplib.h
tools/libs/kxgostformlib/: kxgostformlib.cxx  kxgostformlib.h
tools/libs/kxparsetablelib/: kxparsetablelib.cxx  kxparsetablelib.h
tools/libs/kxsvglib/: kxsvglib.cxx  kxsvglib.h
АБВГ.123456.001 (Квантовый телепортатор)/: makefile
АБВГ.123456.001 (Квантовый телепортатор)/Common/: 2.106-form1.mak  2.106-form5.mak  burst.mak  common.form.mak  common.mak  form.mak  form2.mak  listofchanges.mak  listofel.mak  merge.pages.mak  merge.part.mak  merge.parts.mak  overlay.mak  part.mak  subdirs.linux.mak  svg.mak  tex.mak
АБВГ.123456.001 (Квантовый телепортатор)/Tools/: makefile
АБВГ.123456.001 (Квантовый телепортатор)/АБВГ.123456.001 (Спецификация)/: form.kxg
АБВГ.123456.001 (Квантовый телепортатор)/АБВГ.123456.001 ВП (Ведомость покупных изделий)/: data.kxg  form.kxg  makefile
АБВГ.123456.001 (Квантовый телепортатор)/АБВГ.123456.001 ПЭ3 (Перечень элементов)/: data.kxg  form.kxg
АБВГ.123456.001 (Квантовый телепортатор)/АБВГ.123456.001 РЭ (Руководство по эксплуатации)/: doc.tex  form.kxg  (+1 more)
(+29 files in other folders)
